UI: Source context menu

--- a/UI/CMakeLists.txt
+++ b/UI/CMakeLists.txt
@@ -56,6 +56,7 @@ configure_file(
 set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
 set(CMAKE_AUTOMOC TRUE)
 
+find_package(Qt5Widgets ${FIND_MODE})
 find_package(Qt5Svg ${FIND_MODE})
 find_package(Qt5Xml ${FIND_MODE})
 
@@ -73,7 +74,6 @@ if(NOT Qt5Widgets_FOUND)
 		return()
 	endif()
 endif()
-
 
 include_directories(${FFMPEG_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
@@ -262,7 +262,10 @@ set(obs_SOURCES
 	source-label.cpp
 	remote-text.cpp
 	audio-encoders.cpp
-	qt-wrappers.cpp)
+	qt-wrappers.cpp
+	obs-proxy-style.cpp
+	locked-checkbox.cpp
+	visibility-checkbox.cpp)
 
 set(obs_HEADERS
 	${obs_PLATFORM_HEADERS}
@@ -325,7 +328,8 @@ set(obs_HEADERS
 	remote-text.hpp
 	audio-encoders.hpp
 	qt-wrappers.hpp
-	clickable-label.hpp)
+	clickable-label.hpp
+	obs-proxy-style.hpp)
 
 set(obs_importers_HEADERS
 	importers/importers.hpp)
